--- a/VersaoEntregador/android/app/src/main/AndroidManifest.xml
+++ b/VersaoEntregador/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fastbiteus_delivery"
+    package="com.fastbiteusfooddeliverymanAppAndroid"
     xmlns:tools="http://schemas.android.com/tools">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -76,7 +76,7 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <service
-            android:name="com.fastbiteus_delivery.BackgroundService"
+            android:name="com.fastbiteusfooddeliverymanAppAndroid.BackgroundService"
             android:enabled="true"
             android:exported="false" />
         <meta-data
