--- a/VersaoEntregador/android/app/src/profile/AndroidManifest.xml
+++ b/VersaoEntregador/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fastbiteus_delivery">
+    package="com.fastbiteusfooddeliverymanAppAndroid">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
